[project]
name = "mlx-im"
version = "0.1.0"
description = "MLX Image Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.21.1",
    "numpy>=2.2.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
test = [
    "timm>=1.0.12",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_im"]
